--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,21 +1,39 @@
-.header {
-  padding: 20px 0;
+.page-header {
+  background-color: gray;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 }
 
+header > .container {
+  width: 1360px;
+  margin: 0 auto;
+  padding-left: 28px;
+  padding-right: 28px;
+}
+
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo {
+  font-weight: 400;
+  font-size: 35px;
+  line-height: 1.20686;
+  color: #fff;
+}
+.logo-green {
+  color: #28a745;
+}
 .nav-list {
   display: flex;
-  align-items: center;
-  justify-content: flex-end;
   gap: 40px;
 }
-
-.nav-link {
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  line-height: 1.5;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: #747bff;
+.nav-list-item {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56444;
+  color: #fff;
 }
