--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,10 @@
 /* Reset styles */
+body {
+  font-family: 'Open Sans', sans-serif;
+  color: #333;
+  background-color: #fff;
+}
+
 h1,
 h2,
 h3,
@@ -9,27 +15,21 @@ p {
   margin: 0;
 }
 
-p:last-child {
-  margin-bottom: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
 a {
-  color: currentColor;
+  color: inherit;
   text-decoration: none;
+}
+
+ul,
+ol {
+  list-style-type: none;
 }
 
 button {
   cursor: pointer;
 }
 
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+.container {
+  max-width: 1360px;
+  margin: 0 auto;
 }
