--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,16 @@
-<header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
-      </li>
-
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
-      </li>
-    </ul>
-  </nav>
+<header class="page-header">
+  <div class="container">
+    <nav class="nav-container">
+      <a class="logo" href="./index.html"
+        ><span class="logo-green">Finance </span>Ledger</a
+      >
+      <ul class="nav-list">
+        <li class="nav-list-item"><a href="#hero">Home</a></li>
+        <li class="nav-list-item"><a href="">About</a></li>
+        <li class="nav-list-item"><a href="">Cases</a></li>
+        <li class="nav-list-item"><a href="">Blog</a></li>
+        <li class="nav-list-item"><a href="">Contact</a></li>
+      </ul>
+    </nav>
+  </div>
 </header>
