--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -1,14 +1,19 @@
 <section>
   <div class="container">
-    <img src="./images/about.jpg" alt="Team Photo" width="670" height="460" />
-    <p>What you are looking for</p>
-    <h2>We provide bespoke solutions</h2>
+    <p>April 16 2020</p>
+    <h2>Blog Post One</h2>
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptate, ipsum
       dignissimos quae laudantium asperiores nam aliquid impedit harum illum
       dolore explicabo ab dolores itaque rerum temporibus doloribus iste maiores
       deleniti?
     </p>
-    <button type="button">Read More</button>
+    <button type="button">Read Our Blog</button>
+    <img
+      src="./images/workingdesk.jpg"
+      alt="workingdesk"
+      width="670"
+      height="460"
+    />
   </div>
 </section>
